[gd_scene load_steps=5 format=3 uid="uid://4lmdnin65nry"]

[ext_resource type="Script" path="res://editor.gd" id="1_p37q2"]
[ext_resource type="Texture2D" uid="uid://dvokjyy68i4h2" path="res://backing.svg" id="2_njhvo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nvvkq"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xyos3"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[node name="edit" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_p37q2")

[node name="HSeparator" type="HSeparator" parent="."]
custom_minimum_size = Vector2(9000, 1.45519e-11)
layout_mode = 1
offset_right = 40.0
offset_bottom = 4.0

[node name="VSeparator" type="VSeparator" parent="."]
custom_minimum_size = Vector2(1.45519e-11, 9000)
layout_mode = 0
offset_right = 4.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_right = 60.0
offset_bottom = 60.0
theme_override_styles/panel = SubResource("StyleBoxFlat_nvvkq")

[node name="Node2D" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="Node2D"]
texture = ExtResource("2_njhvo")

[node name="Polygon2D" type="Polygon2D" parent="Node2D/Sprite2D"]
color = Color(0.262745, 0.443137, 0.823529, 1)

[node name="Node2D" type="Node2D" parent="Node2D/Sprite2D"]

[node name="Line2D" type="Line2D" parent="Node2D/Sprite2D"]
width = 1.0
default_color = Color(1, 0, 0, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 222.0
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="PanelContainer" type="PanelContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/PanelContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="ScrollContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "level name"

[node name="export" type="Button" parent="ScrollContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Export level"

[node name="new" type="Button" parent="ScrollContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "New level"

[node name="load" type="Button" parent="ScrollContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Load level"

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Timer cycle time"

[node name="SpinBox" type="SpinBox" parent="ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
step = 0.01
suffix = "s"

[node name="delete point" type="Button" parent="ScrollContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Delete last point"

[node name="delete asset" type="Button" parent="ScrollContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Delete last asset"

[node name="HBoxContainer2" type="HBoxContainer" parent="ScrollContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="edit" type="Button" parent="ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Edit shape"

[node name="place" type="Button" parent="ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "place objects"

[node name="HSeparator" type="HSeparator" parent="ScrollContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_xyos3")

[node name="HSlider" type="HSlider" parent="ScrollContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
max_value = 360.0

[connection signal="pressed" from="ScrollContainer/PanelContainer/VBoxContainer/export" to="." method="_export_pressed"]
[connection signal="pressed" from="ScrollContainer/PanelContainer/VBoxContainer/new" to="." method="_new_pressed"]
[connection signal="pressed" from="ScrollContainer/PanelContainer/VBoxContainer/load" to="." method="_load_pressed"]
[connection signal="pressed" from="ScrollContainer/PanelContainer/VBoxContainer/delete point" to="." method="_delete_point_pressed"]
[connection signal="pressed" from="ScrollContainer/PanelContainer/VBoxContainer/delete asset" to="." method="_delete_asset_pressed"]
[connection signal="pressed" from="ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer2/edit" to="." method="_edit_pressed"]
[connection signal="pressed" from="ScrollContainer/PanelContainer/VBoxContainer/HBoxContainer2/place" to="." method="_place_pressed"]
[connection signal="value_changed" from="ScrollContainer/PanelContainer/VBoxContainer/HSlider" to="." method="_rot_changed"]
